--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,10 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12, <3.13"
-dependencies = []
+dependencies = [
+    "alembic>=1.17.2",
+    "asyncpg>=0.30.0",
+    "psycopg2>=2.9.11",
+    "pydantic>=2.12.4",
+    "sqlmodel>=0.0.27",
+]
