--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,5 +9,6 @@ dependencies = [
     "asyncpg>=0.30.0",
     "psycopg2>=2.9.11",
     "pydantic>=2.12.4",
+    "pydantic-settings>=2.12.0",
     "sqlmodel>=0.0.27",
 ]
