--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,8 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12, <3.13"
-dependencies = []
+dependencies = [
+    "fastapi[standard]>=0.121.2",
+    "pydantic>=2.12.4",
+    "sqlmodel>=0.0.27",
+]
