--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "pydantic-settings>=2.12.0",
     "sqlmodel>=0.0.27",
     "kaggle>=1.7.4.5",
+    "elevenlabs>=2.23.0",
 ]
 
 [tool.setuptools.packages.find]
